2002-02-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht: Document adding arbitrary headers with the
	`tag' action, from/to-mailman, from/to-ezmlm, and from/to-autocdb.
	
2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Python >= 2.0 is now required.

	* results.ht (Links): Add freshmeat.net comment from Martin
	Dougiamas to user testimonials, and updated monthly spam count.
	
2002-01-27  Jason R. Mastaler  <jason@mastaler.com>

	* config-filter.ht: Merge in Tim Legant's documentation.
	
2002-01-26  Jason R. Mastaler  <jason@mastaler.com>

	* download.ht (Links): Mention that the tarball can be used to
	easily create an RPM package since it includes a tmda.spec file.

	* config-filter.ht (Links): Document the new filter file syntax,
	new tag action, and the new default action keyword.

2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add freshmeat.net comment from Sven Neuhaus
	to user testimonials.

2002-01-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht (Links): RPMs are now built/installed directly from
	the source tarball.

	* download.ht (Links): Update download locations.

2002-01-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* bugs.ht: Added coding style preferences to the Patches section.

2002-01-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* trouble.ht (Links): Recommend reading UPGRADE.

2002-01-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-filter.ht (Links): Update python-cdb module link.

2002-01-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* index.ht (Links): Link to the Client Configuration page, don't
	just refer to it.

	* results.ht (Links): Replace Robin Socha testimonial with
	<deathsquad.87666dmzet.fsf@socha.net>.
	
	* faq.ht: New entries: 

	- "Is TMDA planning to support Microsoft Exchange Server?"