@@ -1,5 +1,8 @@
 2002-02-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* faq.ht: New entry: "Why isn't TMDA written in Perl, C, C++,
+	Java, etc..?"
+	
 	* config-filter.ht: Document adding arbitrary headers with the
 	`tag' action, from/to-mailman, from/to-ezmlm, and from/to-autocdb.
 	
